--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- jquery -->
   <!-- IE8兼容 -->
   <!--[if IE]>
-    <script type="text/javascript" src="https://cdn.staticfile.org/jquery/1.9.0/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
   <![endif]-->
   <!--[if !IE]><!-->
     <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
