fix banner bug and formcheck bug in ie7

--- a/formCheck.html
+++ b/formCheck.html
@@ -318,7 +318,7 @@
         });
 
         $('.btn-submit').click(function (e) {
-            return form.checkAll();
+            return form.checkAll();;
         });
 
         $('.getCodeBtn').click(function (e) {
