更新Gruntfile配置，实现合并和压缩配置

--- a/formCheck.html
+++ b/formCheck.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>表单异步验证</title>
-    <link rel="stylesheet" href="./dist/css/form.css">
+    <link rel="stylesheet" href="./dist/css/barton.min.css">
+    <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
 </head>
 
 <body>
@@ -154,7 +155,7 @@
     <!--<![endif]-->
 
     <!-- 自制插件 -->
-    <script type="text/javascript" src="./dist/js/form.check.js"></script>
+    <script type="text/javascript" src="./dist/js/barton-plugin.min.js"></script>
     <script>
         var form = new FormCheck('#form', {
             fields: {
