--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"> -->
   <!-- css plugin end -->
 
-  <link rel="stylesheet" href="./dist/css/index.css">
+  <link rel="stylesheet" href="./dist/css/barton.min.css">
+  <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
 </head>
 <body>
   <!-- banner start -->
@@ -59,9 +60,7 @@
   <script type="text/javascript" src="./node_modules/jquery.easing/jquery.easing.min.js"></script>
 
   <!-- banner plugin -->
-  <script type="text/javascript" src="./dist/js/banner.js"></script>
-  <!-- loader plugin -->
-  <script type="text/javascript" src="./dist/js/loader.js"></script>
+  <script type="text/javascript" src="./dist/js/barton-plugin.js"></script>
 
   <!-- javascript plugin end -->
 
