日期插件添加范围控制，添加部分公共样式

--- a/formDate.html
+++ b/formDate.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>FormDate</title>
+    <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
 
-    <link rel="stylesheet" href="./dist/css/barton.min.css">
-    <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
+    <link rel="stylesheet" href="./dist/css/barton.css">
+    <link rel="stylesheet" href="./dist/css/barton-plugin.css">
   </head>
   <body>
-    <div class="date-selector">
-      <input type="text" placeholder="请选择开始日期">
+    <div class="date-selector fl">
+      <input type="text" placeholder="请选择开始日期" class="startdate-selector">
       <div class="selector">
         <div class="top">
           <span class="text"></span>
           <a class="btn prev">&lt;</a>
           <a class="btn next">&gt;</a>
+          <div class="clear"></div>
         </div>
         <div class="weeks clearfix">
           <span>日</span>
@@ -24,6 +28,7 @@
           <span>四</span>
           <span>五</span>
           <span>六</span>
+          <div class="clear"></div>
         </div>
         <div class="days clearfix">
         </div>
@@ -31,8 +36,34 @@
         </div>
       </div>
     </div>
-    <!-- &nbsp;-&nbsp;
-    <input type="text" placeholder="请选择结束日期"> -->
+    <div class="fl">
+      &nbsp;-&nbsp;
+    </div>
+    <div class="date-selector fl">
+      <input type="text" placeholder="请选择开始日期" class="enddate-selector">
+      <div class="selector">
+        <div class="top">
+          <span class="text"></span>
+          <a class="btn prev">&lt;</a>
+          <a class="btn next">&gt;</a>
+          <div class="clear"></div>
+        </div>
+        <div class="weeks clearfix">
+          <span>日</span>
+          <span>一</span>
+          <span>二</span>
+          <span>三</span>
+          <span>四</span>
+          <span>五</span>
+          <span>六</span>
+          <div class="clear"></div>
+        </div>
+        <div class="days clearfix">
+        </div>
+        <div class="months clearfix" style="display: none;">
+        </div>
+      </div>
+    </div>
 
     <!--[if IE]>
       <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
@@ -41,12 +72,22 @@
       <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
     <!--<![endif]-->
 
-    <script type="text/javascript" src="./dist/js/barton-plugin.min.js"></script>
-    </script>
+    <script type="text/javascript" src="./dist/js/form.date.js"></script>
+
     <script>
-      var formDate = new FormDate('.date-selector>input');
+      var startFormDate, endFormDate;
+      startFormDate = new FormDate('.startdate-selector', {
+        getMaxDate: function () {
+          return endFormDate.selectedDate;
+        }
+      });
+      endFormDate = new FormDate('.enddate-selector', {
+        getMinDate: function () {
+          return startFormDate.selectedDate;
+        }
+      });
     </script>
 
-    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+    <!-- <script type="text/javascript" src="http://localhost:35729/livereload.js"></script> -->
   </body>
 </html>
