修改Gruntfile配置，修复watch问题。更改目录结构

--- a/demos/formbackup.html
+++ b/demos/formbackup.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>表单本地缓存数据</title>
-    <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
-    <link rel="stylesheet" href="./dist/css/barton.min.css">
-    <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
+    <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="/dist/css/barton.min.css">
+    <link rel="stylesheet" href="/dist/css/barton-plugin.min.css">
 </head>
 
 <body>
@@ -100,13 +100,13 @@
     <!-- jquery -->
     <!-- IE8兼容 -->
     <!--[if IE]>
-      <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
+      <script type="text/javascript" src="/js/jquery-1.9.0.min.js"></script>
   <![endif]-->
     <!--[if !IE]><!-->
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!--<![endif]-->
 
-    <script type="text/javascript" src="./dist/js/barton-plugin.min.js"></script>
+    <script type="text/javascript" src="/dist/js/barton-plugin.min.js"></script>
     <!-- livereload -->
     <!-- <script type="text/javascript" src="http://localhost:35729/livereload.js"></script> -->
 
