--- a/demos/index.html
+++ b/demos/index.html
@@ -7,14 +7,14 @@
   <title>轮播图</title>
   <!-- css plugin start -->
   <!-- normalize -->
-  <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
 
   <!-- font-awesome -->
-  <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"> -->
+  <!-- <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"> -->
   <!-- css plugin end -->
 
-  <link rel="stylesheet" href="./dist/css/barton.min.css">
-  <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
+  <link rel="stylesheet" href="/dist/css/barton.min.css">
+  <link rel="stylesheet" href="/dist/css/barton-plugin.min.css">
 </head>
 <body>
   <!-- banner start -->
@@ -50,17 +50,17 @@
   <!-- jquery -->
   <!-- IE8兼容 -->
   <!--[if IE]>
-    <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.0.min.js"></script>
   <![endif]-->
   <!--[if !IE]><!-->
-    <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
   <!--<![endif]-->
 
   <!-- jquery easing plugin -->
-  <script type="text/javascript" src="./node_modules/jquery.easing/jquery.easing.min.js"></script>
+  <script type="text/javascript" src="/node_modules/jquery.easing/jquery.easing.min.js"></script>
 
   <!-- banner plugin -->
-  <script type="text/javascript" src="./dist/js/barton-plugin.js"></script>
+  <script type="text/javascript" src="/dist/js/barton-plugin.js"></script>
 
   <!-- javascript plugin end -->
 
