--- a/demos/formCheck.html
+++ b/demos/formCheck.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>表单异步验证</title>
-    <link rel="stylesheet" href="./dist/css/barton.min.css">
-    <link rel="stylesheet" href="./dist/css/barton-plugin.min.css">
+    <link rel="stylesheet" href="/dist/css/barton.min.css">
+    <link rel="stylesheet" href="/dist/css/barton-plugin.min.css">
 </head>
 
 <body>
@@ -148,14 +148,14 @@
     </form>
 
     <!--[if IE]>
-      <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
+      <script type="text/javascript" src="/js/jquery-1.9.0.min.js"></script>
     <![endif]-->
     <!--[if !IE]><!-->
-      <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+      <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!--<![endif]-->
 
     <!-- 自制插件 -->
-    <script type="text/javascript" src="./dist/js/barton-plugin.min.js"></script>
+    <script type="text/javascript" src="/dist/js/barton-plugin.min.js"></script>
     <script>
         var form = new FormCheck('#form', {
             fields: {
