--- a/demos/formDate.html
+++ b/demos/formDate.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>FormDate</title>
-    <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
 
-    <link rel="stylesheet" href="./dist/css/barton.css">
-    <link rel="stylesheet" href="./dist/css/barton-plugin.css">
+    <link rel="stylesheet" href="/dist/css/barton.css">
+    <link rel="stylesheet" href="/dist/css/barton-plugin.css">
   </head>
   <body>
     <div class="date-selector fl">
@@ -66,13 +66,13 @@
     </div>
 
     <!--[if IE]>
-      <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
+      <script type="text/javascript" src="/js/jquery-1.9.0.min.js"></script>
     <![endif]-->
     <!--[if !IE]><!-->
-      <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+      <script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!--<![endif]-->
 
-    <script type="text/javascript" src="./dist/js/form.date.js"></script>
+    <script type="text/javascript" src="/dist/js/form.date.js"></script>
 
     <script>
       var startFormDate, endFormDate;
