--- a/demos/speed.html
+++ b/demos/speed.html
@@ -11,13 +11,13 @@
     <div id="root"></div>
 
     <!--[if lte IE 8]>
-        <script type="text/javascript" src="./js/jquery-1.9.0.min.js"></script>
+        <script type="text/javascript" src="/js/jquery-1.9.0.min.js"></script>
     <![endif]-->
     <!--[if gt IE 8]>
-    <!--><script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <!--><script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
     <!--<![endif]-->
 
-    <script type="text/javascript" src="./js/speed.js"></script>
+    <script type="text/javascript" src="/js/speed.js"></script>
     <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
